--- a/static/styles.css
+++ b/static/styles.css
@@ -58,5 +58,5 @@ input[type="submit"]:hover {
     border-left: 5px solid #0056b3;
 }
 body {
-    background-color: red;
+    background-color: rgb(0, 217, 255);
 }
